--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--zad 1-->
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -18,5 +19,20 @@
   </div>
 </div>
 
+<!--zad 2-->
+<hr>
+<div class="container">
+  <ol>
+    <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
+    <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
+    <li>Add a button which may only be clicked if the username is NOT an empty string</li>
+    <li>Upon clicking the button, the username should be reset to an empty string</li>
+  </ol>
 
-
+  <label for="userName">UserName</label>
+  <input id="userName" type="text" class="form-control" [(ngModel)]="userName">
+  <button
+    class="btn btn-primary"
+    [disabled]="checkIfUserEmpty()"
+    (click)="resetUser()">Reset user</button>
+</div>
