--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,6 @@
       <p>Use external or internal templates and styles!</p>
       <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
 
-      <hr>
       <app-success-alert></app-success-alert>
       <app-warning-alert></app-warning-alert>
 
@@ -35,4 +34,28 @@
     class="btn btn-primary"
     [disabled]="checkIfUserEmpty()"
     (click)="resetUser()">Reset user</button>
+</div>
+
+
+<!--zad 3-->
+<hr>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <ol>
+        <li>Add A button which says 'Display Details'</li>
+        <li>Add a paragraph with any content of your choice (e.g. 'Secret Password = tuna')</li>
+        <li>Toggle the displaying of that paragraph with the button created in the first step</li>
+        <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or simply an incrementing number)</li>
+        <li>Starting at the 5th log item, give all future log items a blue background (via ngStyle) and white color (ngClass)</li>
+      </ol>
+    </div>
+  </div>
+
+  <button class="btn btn-primary" (click)="addToArray()">Display Details</button>
+  <p [ngStyle]="{visibility: visibility}">Secret Password = tuna</p>
+  <div
+    *ngFor="let logItem of arrayNumbers; let i = index"
+    [ngStyle]="{backgroundColor: i >= 5 ? 'blue' : 'white'}" [ngClass]="{'white-text': i >= 5}"
+  >{{logItem}}</div>
 </div>
